# wyu_navigator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 01e854c05c11_init.py  044e65950337_add_point_table.py  1104b16b021e_init.py  175f7db121dc_add_icon.py  20b1de7da181_init.py  2351a9360cfc_no.py  26e6bb22135e_add_emailcode_table.py  2be65b1d0c88_init.py  3396b2862f9f_add_article.py  371422ea54f8_init.py  3ff2df412b84_init.py  401ebf63f963_init.py  418152e1213b_init.py  41869bbfb778_init.py  43258f63c86a_no.py  44d01253cfa6_init.py  478a96166277_init.py  4a5af808e5a5_init.py  5179f8eff81a_init.py  530e9161fdf3_init.py  53423398e3c9_init.py  57375930641b_no.py  5c55c99a63bc_init.py  7c76f4d9b54b_init.py  831a8d7ffaa4_init.py  853a16a2269a_init.py  8869204af23f_init.py  8c952c820729_add_article.py  9618507328e0_init.py  962e81f36529_init.py  98e8d8cdd34b_init.py  a051ec0b9d8a_init.py  a72205f65cf9_init.py  b117e04cc527_init.py  b398c746bfde_init.py  bd78f7a3d663_init.py  bd9f07c14221_init.py  bf9de1a7cb70_init.py  c2f6de5a28cd_add_article.py  d462b301e47b_table.py  (+7 more)
app/: database.py  dependences.py  dependencies.py  loggers.py  main.py  settings.py  test.py
app/crud/: article.py  auth.py  point.py  user.py
app/models/: article.py  auth.py  base.py  point.py  user.py
app/routers/: article.py  auth.py  point.py  storage.py  user.py
uni-app/: index.html  manifest.json  pages.json  project.private.config.json  vite.config.js
wechat-app/: app.json  config.js  project.config.json  project.private.config.json
(+61 files in other folders)
